monitoring/prometheus/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    name: prometheus
    app: prometheus
