monitoring/prometheus/05-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.3.2
          ports:
            - name: http
              containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
              readOnly: true
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
