monitoring/prometheus/07-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  rules:
    - host: prometheus.k8s.schuldt.lcl
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: http
